<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="ageFilter"
            type="int[]" />

        <variable
            name="styleFilter"
            type="java.util.Set" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TableLayout
                    android:id="@+id/mAgeFilterTableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="*">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/section_header"
                            android:layout_span="4"
                            android:text="@string/string_age_group"
                            android:textColor="@color/color_week_text" />
                    </TableRow>

                    <TableRow style="@style/default_table_row">

                        <CheckBox
                            android:id="@+id/ageBox1"
                            style="@style/filter_item_age"
                            ageFilterMarked="@{ageFilter}"
                            android:tag="0"
                            android:text="@string/string_age_10s" />

                        <CheckBox
                            android:id="@+id/ageBox2"
                            style="@style/filter_item_age"
                            ageFilterMarked="@{ageFilter}"
                            android:tag="1"
                            android:text="@string/string_age_early_20s" />

                        <CheckBox
                            android:id="@+id/ageBox3"
                            style="@style/filter_item_age"
                            ageFilterMarked="@{ageFilter}"
                            android:tag="2"
                            android:text="@string/string_age_mid_20s" />

                        <CheckBox
                            android:id="@+id/ageBox4"
                            style="@style/filter_item_age"
                            ageFilterMarked="@{ageFilter}"
                            android:tag="3"
                            android:text="@string/string_age_late_20s" />
                    </TableRow>

                    <TableRow style="@style/default_table_row">

                        <CheckBox
                            android:id="@+id/ageBox5"
                            style="@style/filter_item_age"
                            ageFilterMarked="@{ageFilter}"
                            android:tag="4"
                            android:text="@string/string_age_early_30s" />

                        <CheckBox
                            android:id="@+id/ageBox6"
                            style="@style/filter_item_age"
                            ageFilterMarked="@{ageFilter}"
                            android:tag="5"
                            android:text="@string/string_age_mid_30s" />

                        <CheckBox
                            android:id="@+id/ageBox7"
                            style="@style/filter_item_age"
                            ageFilterMarked="@{ageFilter}"
                            android:tag="6"
                            android:text="@string/string_age_late_30s" />
                    </TableRow>

                </TableLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="*">

                    <TableRow style="@style/default_table_row">

                        <TextView
                            style="@style/section_header"
                            android:layout_marginTop="@dimen/dimen_section_header_base_margin"
                            android:layout_span="3"
                            android:text="@string/string_style"
                            android:textColor="@color/color_week_text" />
                    </TableRow>

                    <TableRow style="@style/default_table_row">

                        <CheckBox
                            android:id="@+id/styleBox1"
                            style="@style/filter_item_style"
                            styleFilterMarked="@{styleFilter}"
                            android:text="@string/string_style_famine" />

                        <CheckBox
                            android:id="@+id/styleBox2"
                            style="@style/filter_item_style"
                            styleFilterMarked="@{styleFilter}"
                            android:text="@string/string_style_modern_cynical" />

                        <CheckBox
                            android:id="@+id/styleBox3"
                            style="@style/filter_item_style"
                            styleFilterMarked="@{styleFilter}"
                            android:text="@string/string_style_simple_basic" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <CheckBox
                            android:id="@+id/styleBox4"
                            style="@style/filter_item_style"
                            styleFilterMarked="@{styleFilter}"
                            android:text="@string/string_style_lovely" />

                        <CheckBox
                            android:id="@+id/styleBox5"
                            style="@style/filter_item_style"
                            styleFilterMarked="@{styleFilter}"
                            android:text="@string/string_style_unique" />

                        <CheckBox
                            android:id="@+id/styleBox6"
                            style="@style/filter_item_style"
                            styleFilterMarked="@{styleFilter}"
                            android:text="@string/string_style_missi" />
                    </TableRow>

                    <TableRow style="@style/default_table_row">

                        <CheckBox
                            android:id="@+id/styleBox7"
                            style="@style/filter_item_style"
                            styleFilterMarked="@{styleFilter}"
                            android:text="@string/string_style_campus_look" />

                        <CheckBox
                            android:id="@+id/styleBox8"
                            style="@style/filter_item_style"
                            styleFilterMarked="@{styleFilter}"
                            android:text="@string/string_style_vintage" />

                        <CheckBox
                            android:id="@+id/styleBox9"
                            style="@style/filter_item_style"
                            styleFilterMarked="@{styleFilter}"
                            android:text="@string/string_style_sexy_glam" />
                    </TableRow>

                    <TableRow style="@style/default_table_row">

                        <CheckBox
                            android:id="@+id/styleBox10"
                            style="@style/filter_item_style"
                            styleFilterMarked="@{styleFilter}"
                            android:text="@string/string_style_school_look" />

                        <CheckBox
                            android:id="@+id/styleBox11"
                            style="@style/filter_item_style"
                            styleFilterMarked="@{styleFilter}"
                            android:text="@string/string_style_romantic" />

                        <CheckBox
                            android:id="@+id/styleBox12"
                            style="@style/filter_item_style"
                            styleFilterMarked="@{styleFilter}"
                            android:text="@string/string_style_office_look" />
                    </TableRow>

                    <TableRow style="@style/default_table_row">

                        <CheckBox
                            android:id="@+id/styleBox13"
                            style="@style/filter_item_style"
                            styleFilterMarked="@{styleFilter}"
                            android:text="@string/string_style_office_look" />

                        <CheckBox
                            android:id="@+id/styleBox14"
                            style="@style/filter_item_style"
                            styleFilterMarked="@{styleFilter}"
                            android:text="@string/string_style_luxury" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </ScrollView>


        <Button
            android:id="@+id/confirmButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/color_filter_confirm"
            android:text="@string/string_confirm"
            android:textColor="@color/color_white"
            android:textSize="16dp" />
    </LinearLayout>
</layout>
